--- a/swift-protocols-and-extensions/swift-protocols-and-extensions/Base.lproj/Main.storyboard
+++ b/swift-protocols-and-extensions/swift-protocols-and-extensions/Base.lproj/Main.storyboard
@@ -53,14 +53,18 @@
                         <constraints>
                             <constraint firstItem="9v7-Z5-TA8" firstAttribute="leading" secondItem="qFU-FS-YNj" secondAttribute="trailing" constant="36" id="056-HF-qkH"/>
                             <constraint firstItem="5J5-sb-GvT" firstAttribute="leading" secondItem="9v7-Z5-TA8" secondAttribute="leading" id="0cu-ee-Dok"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ur9-lw-XWx" secondAttribute="trailing" constant="20" symbolic="YES" id="0sX-PF-mdC"/>
                             <constraint firstItem="qFU-FS-YNj" firstAttribute="leading" secondItem="ur9-lw-XWx" secondAttribute="leading" id="84x-sl-qVI"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="SSP-S0-2e0" secondAttribute="trailing" constant="20" symbolic="YES" id="AMP-KJ-Dr6"/>
                             <constraint firstItem="5J5-sb-GvT" firstAttribute="centerY" secondItem="SSP-S0-2e0" secondAttribute="centerY" id="BhW-Ff-KGJ"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9v7-Z5-TA8" secondAttribute="trailing" constant="20" symbolic="YES" id="Bt6-vt-g7x"/>
                             <constraint firstItem="ur9-lw-XWx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="43" id="Sbs-Bf-TWh"/>
                             <constraint firstItem="qFU-FS-YNj" firstAttribute="top" secondItem="ur9-lw-XWx" secondAttribute="bottom" constant="17" id="Y3H-vh-npE"/>
                             <constraint firstItem="9v7-Z5-TA8" firstAttribute="centerY" secondItem="qFU-FS-YNj" secondAttribute="centerY" id="aiI-ig-hd2"/>
                             <constraint firstItem="SSP-S0-2e0" firstAttribute="top" secondItem="qFU-FS-YNj" secondAttribute="bottom" constant="21" id="lJf-Mh-o4D"/>
                             <constraint firstItem="ur9-lw-XWx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="36" id="orl-g5-Tyy"/>
                             <constraint firstItem="SSP-S0-2e0" firstAttribute="leading" secondItem="ur9-lw-XWx" secondAttribute="leading" id="sts-ZH-TSw"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5J5-sb-GvT" secondAttribute="trailing" constant="20" symbolic="YES" id="wGt-Ex-IdY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
